--- a/settings.json
+++ b/settings.json
@@ -4,11 +4,11 @@
 "autocomposing": false,
 "autorecording": true,
 "NamaBot":"AyaaBot", 
-"NomorOwner":"6282138919347", 
-"NamaOwner":"Helga Ilham", 
+"NomorOwner":"6283814160711", 
+"NamaOwner":"lidiyaya", 
 "Gopay" : "Qris",
 "Ovo" : "081398860278",
-"Dana" : "081398860278",
+"Dana" : "0895603183651",
 "LolKey": "DashBot",
 "HunterApi":"Ikyy69"
 }
